fix: mobile sidebar overflow on sidepanel etc

--- a/packages/shared-ui/components/layout/Sidebar/sidebar.scss
+++ b/packages/shared-ui/components/layout/Sidebar/sidebar.scss
@@ -44,7 +44,7 @@
 @media screen and (max-width: 800px) {
   .sidebar {
     position: absolute;
-    z-index: 99999;
+    z-index: 900;
     width: 0;
     padding: 0;
     overflow: hidden;
